--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,3 +1,17 @@
-✅ Added "Downloads Defense Measures" policy type to AppControl Manager - Create Policy Page.
+* AppControl Manager no longer requires SignTool.exe to sign the Code Integrity policies, the required logic has been implemented in it.
 
-✅ Added "Dangerous Script Hosts Blocking" policy type to AppControl Manager - Create Policy Page.
+* Completely removed SignTool.exe related elements from the UI such as areas where user was asked to provide its path or ability to download it from the NuGet repository.
+
+* This makes AppControl Manager easier to use in completely offline environments.
+
+* Disabled Runtime marshaling, improving performance and code quality.
+
+* Added a new button to the sidebar that allows you to optimize memory usage of the app and try to reduce it. AppControl Manager is already highly optimized but this gives users more control over its memory usage.
+
+* In Scan results, for the Signing Scenario column, the status is now displayed as "UserMode" or "KernelMode". Previously, they would show up as 0 and 1, indicating Kernel Mode and User mode respectively. This change improves readability and user experience.
+
+* Updated dependencies to the latest versions.
+
+* The "View File Certificates" page now displays a lot more information about each signer and has the ability to export the results to JSON for backup.
+
+* The "System Information" page now lets you easily open the selected deployed policy in Policy Editor where you can view all of its details, modify it and save it to a file. This is very useful to know what rules are included in the deployed policies. It also supports System policies that come by default with the OS.
