--- a/Harden System Security/Strings/pl-PL/Resources.resw
+++ b/Harden System Security/Strings/pl-PL/Resources.resw
@@ -3709,4 +3709,27 @@ Odcisk Palca: {3}</value>
   <data name="VerifyingAllSecurityMeasuresSuccessful" xml:space="preserve">
     <value>Pomyślnie zweryfikowano wszystkie środki zabezpieczeń.</value>
   </data>
+    <data name="ProtectSubCategory_TLS_ForBattleNet" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>Pozostaw włączony niezabezpieczony zestaw szyfrów wymagany dla łączności internetowej klienta gry Battle.net.</value>
+  </data>
+  <data name="TLSSecurity_TLS_ForBattleNet" xml:space="preserve">
+    <value>Wybierz tę opcję tylko jeśli faktycznie używasz klienta gry Battle.net.</value>
+  </data>
+  <data name="ProtectSubCategory_MiscellaneousConfigurations_ReducedTelemetry" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>Zastosuj zasady ograniczające telemetrię w systemie operacyjnym.</value>
+  </data>
+  <data name="MiscellaneousConfigurations_MiscellaneousConfigurations_ReducedTelemetry" xml:space="preserve">
+    <value>Niektóre funkcje systemu operacyjnego staną się niedostępne.</value>
+  </data>
+  <data name="OptimizeMemoryButton.Content" xml:space="preserve">
+    <value>Optymalizuj pamięć</value>
+  </data>
+  <data name="OptimizeMemoryButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Próba zmniejszenia użycia pamięci poprzez zebranie i skompaktowanie nieużywanej pamięci zarządzanej (w tym dużych obiektów). System operacyjny może zwalniać pamięć RAM stopniowo, dlatego zmiany mogą nie być widoczne od razu. Sprawdź dzienniki po naciśnięciu tego przycisku, aby uzyskać więcej szczegółów.</value>
+  </data>
+  <data name="OptimizeMemoryButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Próba zmniejszenia użycia pamięci poprzez zebranie i skompaktowanie nieużywanej pamięci zarządzanej (w tym dużych obiektów). System operacyjny może zwalniać pamięć RAM stopniowo, dlatego zmiany mogą nie być widoczne od razu. Sprawdź dzienniki po naciśnięciu tego przycisku, aby uzyskać więcej szczegółów.</value>
+  </data>
 </root>
